--- a/chekov.css
+++ b/chekov.css
@@ -32,6 +32,12 @@ font-family: Arial;
 .SOLENI{
     color: hotpink;
 }
+.TUZENBACH:hover{
+    text-shadow:2px 3px 5px green;
+    text-align:left;
+    border:4px solid yellow;
+    filter:blur(5px);
+}
 table {
     border-collapse: collapse;
     width: 100%;
